--- a/css/main.css
+++ b/css/main.css
@@ -185,3 +185,21 @@ body {
   padding: 20px 40px;
   background-color: plum;
 }
+
+@media only screen and (max-width: 900px) {
+  .game__title {
+    font-size: 30px;
+  }
+  .game__image--left, .game__image--right {
+    height: 100px;
+    width: 100px;
+    background-color: gray;
+  }
+  .game__button {
+    column-gap: 10px;
+  }
+  .game__button--paper, .game__button--rock, .game__button--scissors {
+    padding: 10px 15px;
+    background-color: plum;
+  }
+}
